# LW

./: .gitignore
.archive/: package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
.archive/src/: data.ts  main.tsx  styles.css
.notes/: world-system-concept.md  world-system-roadmap.md
lw-desktop/: README.md  index.html  package-lock.json  package.json
lw-desktop/electron/: main.cjs  preload.cjs
lw-desktop/scripts/: install-shortcut.ps1
lw-desktop/src/: main.tsx  styles.css  vite-env.d.ts
lw-system/: .gitignore  README.md  pyproject.toml
lw-system/scripts/: install-desktop.ps1
lw-system/src/lw_cli/: __init__.py  __main__.py  changes.py  config.py  context.py  db.py  desktop.py  doctor.py  main.py  projects.py  reports.py  scanner.py  shell.py  status.py  suggestions.py
