[project]
name = "lw-system"
version = "0.1.0"
description = "Luigi's World local-first desktop CLI for managing projects, files, notes, and future agent workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
lw = "lw_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lw_cli"]
